--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",    
     "gatsby": "^2.26.1",
+    "gatsby-plugin-config": "^1.0.7",
+    "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
